enhanced framework capabilities

--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7581],[],[[4,0,0,[],[1,84,3480],[]],[5,0,0,[],[1,3565,2066],[]],[6,0,0,[],[1,5632,1949],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,0,0,2,[],[1,0,46618],[[3,4,5,0,[],[1,188,19698],[],[[6,0,7,[8],[1,296,10808],[]],[9,0,10,[11],[1,11104,4828],[]],[12,0,13,[14],[1,15932,3954],[]]],[],[3,3,0,0]],[15,16,17,0,[],[1,189,46131],[],[[18,0,0,[],[1,2414,8378],[]],[18,0,0,[],[1,10793,5013],[]],[18,0,0,[],[1,15806,3972],[]],[18,0,0,[],[1,19780,2766],[]],[18,0,0,[],[1,22547,2718],[]],[18,0,0,[],[1,25265,3610],[]],[18,0,0,[],[1,28876,2795],[]],[18,0,0,[],[1,31671,3723],[]],[18,0,0,[],[1,35395,2780],[]],[18,0,0,[],[1,38176,2549],[]],[18,0,0,[],[1,40725,2934],[]],[18,0,0,[],[1,43659,2660],[]]],[],[12,12,0,0]]],[],[],[15,15,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*/Users/dilipdronadula/PycharmProjects/ecommerceRobotTestProject/Tests/E-CommerceTest/test.robot","*Tests/E-CommerceTest/test.robot","*Scenario 1: Verify Cart Checkout","*Scenario 2: Verify Add all product and remove product","*Scenario3: Verify Product Sorting/Filtering"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Suites","*<p><a href=\"https://pabot.org/?ref=log\">Pabot\x3c/a> result from 2 executions.\x3c/p>","*Test","*/Users/dilipdronadula/PycharmProjects/RobotFrameworkDemoTest/Tests/E-CommerceTest/test.robot","*Tests/E-CommerceTest/test.robot","*Scenario 1: Verify Cart Checkout","*<p>This test case is to login into portal, add products to cart, fill information and checkout\x3c/p>","*Sanity","*Scenario 2: Verify Add all product and remove product","*<p>This test case is to login into portal, add products to cart, and remove products from cart\x3c/p>","*Smoke","*Scenario3: Verify Product Sorting/Filtering","*<p>This test case is to verify sorting of products\x3c/p>","*Regression","*dataTest","*/Users/dilipdronadula/PycharmProjects/RobotFrameworkDemoTest/Tests/E-CommerceTest/dataTest.robot","*Tests/E-CommerceTest/dataTest.robot","*Add Remove Items From Excel"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Test","name":"Test","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":0,"label":"All Tests","pass":15,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"Regression","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"label":"Sanity","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"label":"Smoke","pass":1,"skip":0}],[{"elapsed":"00:00:47","fail":0,"id":"s1","label":"Suites","name":"Suites","pass":15,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"Suites.Test","name":"Test","pass":3,"skip":0},{"elapsed":"00:00:46","fail":0,"id":"s1-s2","label":"Suites.dataTest","name":"dataTest","pass":12,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1709513552630;
+window.output["baseMillis"] = 1709636230130;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7592;
+window.output["generated"] = 46632;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
